2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Fixed whitespace.
	* Chats/ProtocolChatView.cs, Chats/SessionChatView.cs,
	  Chats/PersonChatView.cs, Chats/GroupChatView.cs, Chats/ChatView.cs:
	  Refactored tab menu code.
	
	  Moved tab popup menu to ChatView.
	
	  Implemented closing tabs using the middle-mouse button.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp, Chats/ProtocolChatView.cs, Chats/NetworkChatView.cs:
	  Renamed NetworkChatView to ProtocolChatView.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31
	* Frontend-GNOME.mdp: Reference GTK# 2.8 / GNOME# 2.8.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Don't prevent ctrl+a/left/right/backspace key shortcuts.

2008-03-04  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs: Added defaults for ICQ/AIM/MSNP.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Chats/SessionChatView.cs, Entry.cs: Implemented SessionChat*, abusing
	  NetworkChat* as smuxi chat was a dirty hack.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Cache chat name, instead of fetching it always from the
	  proxy object.
	
	  Open URLs in a different thread on Windows (as the call is blocking).
	
	* GnomeUI.cs, ChatViewManager.cs: Fixed indention.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Updated using MonoDevelop 0.18.1
	* Chats/ChatView.cs: added selection fix for GTK# 2.8
